syntax = "proto3";

service Calendarfy {
    rpc Running (EmptyRequest) returns (RunningResponse);

    rpc Uptime (EmptyRequest) returns (UptimeResponse);
}

message EmptyRequest {

}

message RunningResponse {
    bool running = 1;
}

message UptimeResponse {
    int64 uptime = 1;
    string startedAt = 2;
}